--- a/src/client/html/menu.html
+++ b/src/client/html/menu.html
@@ -17,6 +17,7 @@
       <a class="nav-link active" href="/roberto">Roberto</a>
       <a class="nav-link" href="/starKong">Starkong</a>
       <a class="nav-link" href="/kuru">Kuru</a>
+      <a class="nav-link" href="/puissance4">Puissance 4</a>
     </div>
   </div>
 </nav>
