Ajout des chronos page kuru game

--- a/src/client/html/starKong.html
+++ b/src/client/html/starKong.html
@@ -1,11 +1,11 @@
-<title>jeux en JS</title>
+<title>Star kong</title>
 </head>
 <body>
   <div class="container">
   <h1
   class="border border-dark bg-secondary rounded-lg text-white text-center text-uppercase p-3 mt-3"
 >
- StarKong
+ Star Kong
 </h1>
 <div class="row mx-auto  game-controls" id="game-controls">
   <div class="col-6-lg">
