--- a/src/client/html/roberto.html
+++ b/src/client/html/roberto.html
@@ -1,4 +1,4 @@
-<title>Roberto/title>
+<title>Roberto</title>
 <script src="/resources/phaser.js"></script>
   <script src="/roberto/objet/player.js"></script>
   <script src ="/roberto/objet/robot.js"></script>
